[metadata]
name = sappy
version = 0.1
author = Yannick G.
author_email = study.gyannick@gmail.com
description = Simple interface to access the SAP scripting engine via python coupled with some helper functions
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows
license_files = LICENSE

[options]
packages = find:
python_requires = >= 3.10

[options.packages.find]
include = sappy